name:               website
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.8.*
                  , hakyll-sass == 0.2.*
                  , filepath == 1.4.*
                  , pandoc == 1.17.*
  ghc-options:      -threaded -O2 -with-rtsopts=-N4
  default-language: Haskell2010
